fix overflow-x

--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ body {
     font-family: 'Oxygen', sans-serif;
     font-size: 16px;
     line-height: 1.6rem;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
